lash-embed/tests/ui/root_tool_provider_is_not_public.rs
fn main() {
    let _: Option<&dyn lash_embed::ToolProvider> = None;
}
